fix: w-full insted w-screen to avoid overflow

--- a/client/main.css
+++ b/client/main.css
@@ -13,6 +13,6 @@ body {
 }
 
 #root {
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
 }
